New ALICE plus XIAO interface
Newest version of alice-universal pyhon and XIAO interface package

--- a/alice-last-config.cfg
+++ b/alice-last-config.cfg
@@ -1,15 +1,15 @@
-root.geometry('+377+3')
-awgwindow.geometry('+81+1')
+root.geometry('+379+2')
+awgwindow.geometry('+82+2')
 GRW = 720
 GRH = 390
 ColorMode.set(0)
-MathString = "VBuffA + VBuffB"
+MathString = "VBuffA-VBuffB"
 MathUnits = " V"
 MathAxis = "V-A"
-MathXString = "VBuffA"
+MathXString = "(VBuffA-VBuffB)*6.6667"
 MathXUnits = " V"
 MathXAxis = "V-A"
-MathYString = "VBuffB"
+MathYString = "VBuffA-VBuffB"
 MathYUnits = " V"
 MathYAxis = "V-B"
 COLORtext = "#ffffff"
@@ -43,9 +43,9 @@ DestroyPhAScreen()
 DestroyBodeScreen()
 DestroyMeasuewScreen()
 TRIGGERentry.delete(0,END)
-TRIGGERentry.insert(4, 1.99)
+TRIGGERentry.insert(4,  1.64 )
 HozPossentry.delete(0,"end")
-HozPossentry.insert(0, 0)
+HozPossentry.insert(0, 0.00)
 TMsb.delete(0,END)
 TMsb.insert(0, "500us")
 TgInput.set(1)
@@ -54,11 +54,11 @@ ManualTrigger.set(0)
 SingleShot.set(0)
 TgEdge.set(0)
 Roll_Mode.set(0)
-Xsignal.set(1)
+Xsignal.set(3)
 YsignalVA.set(0)
-YsignalVB.set(1)
+YsignalVB.set(0)
 YsignalM.set(0)
-YsignalMX.set(0)
+YsignalMX.set(1)
 YsignalMY.set(0)
 TimeDisp.set(1)
 XYDisp.set(0)
@@ -72,67 +72,59 @@ Show_MathX.set(0)
 Show_MathY.set(0)
 AutoCenterA.set(0)
 AutoCenterB.set(0)
-TRACEmodeTime.set(0)
+TRACEmodeTime.set(1)
 CHAVPosEntry.delete(0,END)
-CHAVPosEntry.insert(4, 2.5)
+CHAVPosEntry.insert(4, 1.65)
 CHAsb.delete(0,END)
-CHAsb.insert(0, "500mV")
+CHAsb.insert(0, "330mV")
 CHAVGainEntry.delete(0,END)
 CHAVGainEntry.insert(4, 1.0)
 CHAVOffsetEntry.delete(0,END)
 CHAVOffsetEntry.insert(4, 0.0)
 CHBVPosEntry.delete(0,END)
-CHBVPosEntry.insert(4, 2.5)
+CHBVPosEntry.insert(4, 1.65)
 CHBsb.delete(0,END)
-CHBsb.insert(0, "500mV")
+CHBsb.insert(0, "330mV")
 CHBVGainEntry.delete(0,END)
-CHBVGainEntry.insert(4, 1.0)
+CHBVGainEntry.insert(4, 1.54)
 CHBVOffsetEntry.delete(0,END)
 CHBVOffsetEntry.insert(4, 0.0)
 CHCVPosEntry.delete(0,END)
-CHCVPosEntry.insert(4, 2.5)
+CHCVPosEntry.insert(4, 1.65)
 CHCsb.delete(0,END)
-CHCsb.insert(0, "500mV")
+CHCsb.insert(0, "50.0mV")
 CHCVGainEntry.delete(0,END)
 CHCVGainEntry.insert(4, 1.0)
 CHCVOffsetEntry.delete(0,END)
 CHCVOffsetEntry.insert(4, 0.0)
-CHDVPosEntry.delete(0,END)
-CHDVPosEntry.insert(4, 2.5)
-CHDsb.delete(0,END)
-CHDsb.insert(0, "500mV")
-CHDVGainEntry.delete(0,END)
-CHDVGainEntry.insert(4, 1.0)
-CHDVOffsetEntry.delete(0,END)
-CHDVOffsetEntry.insert(4, 0.0)
 AWG_Amp_Mode.set(0)
 AWGAPhaseDelay.set(0)
 AWGAAmplEntry.delete(0,END)
-AWGAAmplEntry.insert(4, 0.2)
+AWGAAmplEntry.insert(4, 0.3)
 AWGAOffsetEntry.delete(0,END)
-AWGAOffsetEntry.insert(4, 3.8)
+AWGAOffsetEntry.insert(4, 3.0)
 AWGAFreqEntry.delete(0,END)
-AWGAFreqEntry.insert(4, 1000.0)
+AWGAFreqEntry.insert(4, 400.0)
 AWGAWidthEntry.delete(0,END)
 AWGAWidthEntry.insert(4, )
 AWGADutyCycleEntry.delete(0,END)
-AWGADutyCycleEntry.insert(4, 50)
+AWGADutyCycleEntry.insert(4, 6)
 AWGAShape.set(1)
 AWGBPhaseDelay.set(0)
 AWGBAmplEntry.delete(0,END)
-AWGBAmplEntry.insert(4, 0.2)
+AWGBAmplEntry.insert(4, 0.35)
 AWGBOffsetEntry.delete(0,END)
-AWGBOffsetEntry.insert(4, 3.8)
+AWGBOffsetEntry.insert(4, 2.54)
 AWGBFreqEntry.delete(0,END)
-AWGBFreqEntry.insert(4, 2000.0)
+AWGBFreqEntry.insert(4, 400.0)
 AWGBWidthEntry.delete(0,END)
 AWGBWidthEntry.insert(4, )
 AWGBDutyCycleEntry.delete(0,END)
 AWGBDutyCycleEntry.insert(4, 50)
 AWGBShape.set(1)
 MeasDCV1.set(1)
-MeasMinV1.set(1)
-MeasMaxV1.set(1)
+MeasMinV1.set(0)
+MeasMaxV1.set(0)
 MeasBaseV1.set(0)
 MeasTopV1.set(0)
 MeasMidV1.set(0)
@@ -157,7 +149,7 @@ MeasBHW.set(0)
 MeasBLW.set(0)
 MeasBDCy.set(0)
 MeasBPER.set(0)
-MeasBFREQ.set(0)
+MeasBFREQ.set(1)
 MeasPhase.set(0)
 MeasDelay.set(0)
 MathTrace.set(0)
