--- a/alice_init.ini
+++ b/alice_init.ini
@@ -1,8 +1,8 @@
 HardwareFile = "XIAO_3a_1w_6d_Interface_Level.py"
-# HardwareFile = "Pico_3a_2w_6d_spi_v1_Interface_Level.py"
-# HardwareFile = "Pico_3a_2w_6d_l_Interface_Level.py"
+# HardwareFile = "Pico_3a_2w_6d_mcp_spi_v2_Interface_Level.py"
+# HardwareFile = "XIAO-RP2040_3a_2w_6d_mcp_spi_v1_Interface_Level.py"
 # HardwareFile = "MP720781_Interface_Level.py" # Name of hardware specific functions file to load
-# HardwareFile = "Cyscope_Interface_Level.py" # Name of hardware specific functions file to load
+# HardwareFile = "Cyscope_v2_Interface_Level.py" # Name of hardware specific functions file to load
 # HardwareFile = "PCAudio_Interface_Level.py" # Name of hardware specific functions file to load
 # HardwareFile = "PiPicoSigrok_Interface_Level.py"
 # HardwareFile = "Teensy_2a_1w_8d_l_Interface_Level.py"
@@ -10,6 +10,7 @@ HardwareFile = "XIAO_3a_1w_6d_Interface_Level.py"
 # HardwareFile = "Girino1_Interface_Level.py"
 # HardwareFile = "ESP32_1a_1w_1dInterface_Level.py"
 DeBugMode = 0
+AllowFlashFirmware = 1
 # HardwareFile = "XProto_Interface_Level.py"
 FontSize = 8
 BorderSize = 2
@@ -21,7 +22,7 @@ BorderSize = 2
 # COLORtrace3 = "#88ffff" # light cyan
 # COLORtrace4 = "#ffff88" # light yellow
 # FrameRefief = FLAT # RIDGE
-# GUITheme = "Light" # can be "Dark" "Light" "Blue" "LtBlue" "Custom"
+# GUITheme = "Dark" # can be "Dark" "Light" "Blue" "LtBlue" "Custom"
 # FrameBG = "#d7d7d7" # Med gray
 # ButtonText = "#000000" # black
 # ButtonGreen = "#88ff88" # light green
