Weekly Update 29 Dec 2023
Weekly update for Dec 29 2023. Additions to User guide documentation and README file. Minor change to software trigger alignment. Minor corrections to Adafruit and XIAO SAMD21 boards interface files.

--- a/alice-last-config.cfg
+++ b/alice-last-config.cfg
@@ -1,15 +1,15 @@
-root.geometry('+379+2')
-awgwindow.geometry('+82+2')
+root.geometry('+379+1')
+awgwindow.geometry('+83+1')
 GRW = 720
 GRH = 390
 ColorMode.set(0)
-MathString = "VBuffA-VBuffB"
-MathUnits = " V"
+MathString = "VBuffA*VBuffB"
+MathUnits = " W"
 MathAxis = "V-A"
-MathXString = "(VBuffA-VBuffB)*6.6667"
+MathXString = "(VBuffA-VBuffC)"
 MathXUnits = " V"
 MathXAxis = "V-A"
-MathYString = "VBuffA-VBuffB"
+MathYString = "(VBuffA-VBuffB)/0.510"
 MathYUnits = " V"
 MathYAxis = "V-B"
 COLORtext = "#ffffff"
@@ -43,9 +43,9 @@ DestroyPhAScreen()
 DestroyBodeScreen()
 DestroyMeasuewScreen()
 TRIGGERentry.delete(0,END)
-TRIGGERentry.insert(4,  1.64 )
+TRIGGERentry.insert(4,  4.00 )
 HozPossentry.delete(0,"end")
-HozPossentry.insert(0, 0.00)
+HozPossentry.insert(0, 0.0)
 TMsb.delete(0,END)
 TMsb.insert(0, "500us")
 TgInput.set(1)
@@ -54,9 +54,9 @@ ManualTrigger.set(0)
 SingleShot.set(0)
 TgEdge.set(0)
 Roll_Mode.set(0)
-Xsignal.set(3)
+Xsignal.set(1)
 YsignalVA.set(0)
-YsignalVB.set(0)
+YsignalVB.set(1)
 YsignalM.set(0)
 YsignalMX.set(1)
 YsignalMY.set(0)
@@ -66,13 +66,13 @@ FreqDisp.set(0)
 IADisp.set(0)
 ShowC1_V.set(1)
 ShowC2_V.set(1)
-ShowC3_V.set(0)
+ShowC3_V.set(1)
 ShowC4_V.set(0)
 Show_MathX.set(0)
 Show_MathY.set(0)
 AutoCenterA.set(0)
 AutoCenterB.set(0)
-TRACEmodeTime.set(1)
+TRACEmodeTime.set(0)
 CHAVPosEntry.delete(0,END)
 CHAVPosEntry.insert(4, 1.65)
 CHAsb.delete(0,END)
@@ -86,45 +86,47 @@ CHBVPosEntry.insert(4, 1.65)
 CHBsb.delete(0,END)
 CHBsb.insert(0, "330mV")
 CHBVGainEntry.delete(0,END)
-CHBVGainEntry.insert(4, 1.54)
+CHBVGainEntry.insert(4, 1.0)
 CHBVOffsetEntry.delete(0,END)
 CHBVOffsetEntry.insert(4, 0.0)
 CHCVPosEntry.delete(0,END)
 CHCVPosEntry.insert(4, 1.65)
 CHCsb.delete(0,END)
-CHCsb.insert(0, "50.0mV")
+CHCsb.insert(0, "330mV")
 CHCVGainEntry.delete(0,END)
 CHCVGainEntry.insert(4, 1.0)
 CHCVOffsetEntry.delete(0,END)
 CHCVOffsetEntry.insert(4, 0.0)
+CHMVPosEntry.delete(0,END)
+CHMVPosEntry.insert(4, 0.0)
+CHMsb.delete(0,END)
+CHMsb.insert(0, "330mV")
 AWG_Amp_Mode.set(0)
 AWGAPhaseDelay.set(0)
 AWGAAmplEntry.delete(0,END)
-AWGAAmplEntry.insert(4, 0.3)
+AWGAAmplEntry.insert(4, 0.2)
 AWGAOffsetEntry.delete(0,END)
-AWGAOffsetEntry.insert(4, 3.0)
+AWGAOffsetEntry.insert(4, 3.1)
 AWGAFreqEntry.delete(0,END)
-AWGAFreqEntry.insert(4, 400.0)
-AWGAWidthEntry.delete(0,END)
-AWGAWidthEntry.insert(4, )
+AWGAFreqEntry.insert(4, 200.0)
 AWGADutyCycleEntry.delete(0,END)
-AWGADutyCycleEntry.insert(4, 6)
+AWGADutyCycleEntry.insert(4, 28)
 AWGAShape.set(1)
 AWGBPhaseDelay.set(0)
 AWGBAmplEntry.delete(0,END)
-AWGBAmplEntry.insert(4, 0.35)
+AWGBAmplEntry.insert(4, 0.0)
 AWGBOffsetEntry.delete(0,END)
-AWGBOffsetEntry.insert(4, 2.54)
+AWGBOffsetEntry.insert(4, 2.0)
 AWGBFreqEntry.delete(0,END)
-AWGBFreqEntry.insert(4, 400.0)
-AWGBWidthEntry.delete(0,END)
-AWGBWidthEntry.insert(4, )
+AWGBFreqEntry.insert(4, 200.0)
+AWGBPhaseEntry.delete(0,END)
+AWGBPhaseEntry.insert(4, 0)
 AWGBDutyCycleEntry.delete(0,END)
-AWGBDutyCycleEntry.insert(4, 50)
+AWGBDutyCycleEntry.insert(4, 20)
 AWGBShape.set(1)
 MeasDCV1.set(1)
-MeasMinV1.set(0)
-MeasMaxV1.set(0)
+MeasMinV1.set(1)
+MeasMaxV1.set(1)
 MeasBaseV1.set(0)
 MeasTopV1.set(0)
 MeasMidV1.set(0)
@@ -132,14 +134,26 @@ MeasPPV1.set(1)
 MeasRMSV1.set(0)
 MeasDiffAB.set(0)
 MeasDCV2.set(1)
-MeasMinV2.set(1)
-MeasMaxV2.set(1)
+MeasMinV2.set(0)
+MeasMaxV2.set(0)
 MeasBaseV2.set(0)
 MeasTopV2.set(0)
 MeasMidV2.set(0)
 MeasPPV2.set(1)
 MeasRMSV2.set(0)
 MeasDiffBA.set(0)
+MeasDCV3.set(1)
+MeasMinV3.set(0)
+MeasMaxV3.set(0)
+MeasMidV3.set(0)
+MeasRMSV3.set(0)
+MeasPPV3.set(1)
+MeasDCV4.set(0)
+MeasMinV4.set(0)
+MeasMaxV4.set(0)
+MeasMidV4.set(0)
+MeasPPV4.set(0)
+MeasRMSV4.set(0)
 MeasAHW.set(0)
 MeasALW.set(0)
 MeasADCy.set(0)
@@ -149,7 +163,7 @@ MeasBHW.set(0)
 MeasBLW.set(0)
 MeasBDCy.set(0)
 MeasBPER.set(0)
-MeasBFREQ.set(1)
+MeasBFREQ.set(0)
 MeasPhase.set(0)
 MeasDelay.set(0)
 MathTrace.set(0)
