Weekly Update for Feb 20 2024
This is the weekly roll up of changes for 20 Feb 2024.

--- a/alice_init.ini
+++ b/alice_init.ini
@@ -29,7 +29,7 @@ BorderSize = 2
 # COLORtrace2 = "#ff8888" # light orange
 # COLORtrace3 = "#88ffff" # light cyan
 # COLORtrace4 = "#ffff88" # light yellow
-# FrameRefief = FLAT # RIDGE
+# FrameRelief = FLAT # RIDGE
 # GUITheme = "Dark" # can be "Dark" "Light" "Blue" "LtBlue" "Custom"
 # FrameBG = "#d7d7d7" # Med gray
 # ButtonText = "#000000" # black
@@ -59,7 +59,6 @@ EnableDigIO = 1
 EnableDigitalFilter = 0
 EnableMeasureScreen = 0
 ShowBallonHelp = 1
-PhaseOffset1x = 30
 LabelPlotText.set(0)
 # SerComPort = "COM5"
 # import my_function # Use this to import any user defined functions or sub routines
