--- a/alice_init.ini
+++ b/alice_init.ini
@@ -1,4 +1,5 @@
-HardwareFile = "XIAO_3a_1w_6d_Interface_Level.py"
+# HardwareFile = "XIAO_3a_1w_6d_Interface_Level.py"
+HardwareFile = "XIAO_4a_1w_pwm_Interface_Level.py"
 # HardwareFile = "Bitsy_3a_1w_6d_Interface_Level.py"
 # HardwareFile = "BitsyM4_3a_2w_6d_Interface_Level.py"
 # HardwareFile = "Trinket_3a_1w_6d_Interface_Level.py"
@@ -8,6 +9,7 @@ HardwareFile = "XIAO_3a_1w_6d_Interface_Level.py"
 # HardwareFile = "Pico_3a_2w_6d_mcp_spi_Interface_Level.py"
 # HardwareFile = "Pico_3a_2w_6d_mcp4822_Interface_Level.py"
 # HardwareFile = "Pico_3a_2w_6d_R2R_Interface_Level.py"
+# HardwareFile = "Pico_3a_2w_6d_pwm_Interface_Level.py"
 # HardwareFile = "XIAO-RP2040_3a_2w_6d_mcp_spi_Interface_Level.py"
 # HardwareFile = "MP720781_Interface_Level.py" # Name of hardware specific functions file to load
 # HardwareFile = "Cyscope_v2_Interface_Level.py" # Name of hardware specific functions file to load
