--- a/alice-last-config.cfg
+++ b/alice-last-config.cfg
@@ -43,7 +43,7 @@ DestroyPhAScreen()
 DestroyBodeScreen()
 DestroyMeasuewScreen()
 TRIGGERentry.delete(0,END)
-TRIGGERentry.insert(4,  4.00 )
+TRIGGERentry.insert(4,  1.64 )
 HozPossentry.delete(0,"end")
 HozPossentry.insert(0, 0.0)
 TMsb.delete(0,END)
@@ -66,13 +66,13 @@ FreqDisp.set(0)
 IADisp.set(0)
 ShowC1_V.set(1)
 ShowC2_V.set(1)
-ShowC3_V.set(1)
+ShowC3_V.set(0)
 ShowC4_V.set(0)
 Show_MathX.set(0)
 Show_MathY.set(0)
 AutoCenterA.set(0)
 AutoCenterB.set(0)
-TRACEmodeTime.set(0)
+TRACEmodeTime.set(1)
 CHAVPosEntry.delete(0,END)
 CHAVPosEntry.insert(4, 1.65)
 CHAsb.delete(0,END)
@@ -97,6 +97,14 @@ CHCVGainEntry.delete(0,END)
 CHCVGainEntry.insert(4, 1.0)
 CHCVOffsetEntry.delete(0,END)
 CHCVOffsetEntry.insert(4, 0.0)
+CHDVPosEntry.delete(0,END)
+CHDVPosEntry.insert(4, 1.65)
+CHDsb.delete(0,END)
+CHDsb.insert(0, "330mV")
+CHDVGainEntry.delete(0,END)
+CHDVGainEntry.insert(4, 1.0)
+CHDVOffsetEntry.delete(0,END)
+CHDVOffsetEntry.insert(4, 0.0)
 CHMVPosEntry.delete(0,END)
 CHMVPosEntry.insert(4, 0.0)
 CHMsb.delete(0,END)
@@ -104,11 +112,11 @@ CHMsb.insert(0, "330mV")
 AWG_Amp_Mode.set(0)
 AWGAPhaseDelay.set(0)
 AWGAAmplEntry.delete(0,END)
-AWGAAmplEntry.insert(4, 0.2)
+AWGAAmplEntry.insert(4, 1.0)
 AWGAOffsetEntry.delete(0,END)
-AWGAOffsetEntry.insert(4, 3.1)
+AWGAOffsetEntry.insert(4, 2.3)
 AWGAFreqEntry.delete(0,END)
-AWGAFreqEntry.insert(4, 200.0)
+AWGAFreqEntry.insert(4, 500.0)
 AWGADutyCycleEntry.delete(0,END)
 AWGADutyCycleEntry.insert(4, 28)
 AWGAShape.set(1)
